Add async result extensions and refactor structure
- Introduced new async extension methods for handling results with UniTask and Awaitable.
- Created a new file for ResultAsyncExtensions to encapsulate these methods.
- Refactored existing Maybe and Result classes into a Core namespace for better organization.
- Updated assembly definitions to include references for UniTask.
- Added comprehensive tests for the new async result methods.

--- a/Runtime/NOPE.Runtime.asmdef
+++ b/Runtime/NOPE.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "NOPE.Runtime",
     "rootNamespace": "NOPE.Runtime",
-    "references": [],
+    "references": [
+        "UniTask"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -9,6 +11,17 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "Unity",
+            "expression": "6000.0.0",
+            "define": "NOPE_AWAITABLE"
+        },
+        {
+            "name": "com.cysharp.unitask",
+            "expression": "2.0.0",
+            "define": "NOPE_UNITASK"
+        }
+    ],
     "noEngineReferences": false
 }
