Remove version defines and clean up tests
- Removed versionDefines from assembly definitions.
- Simplified Result usage in test cases by removing namespace prefixes.
- Updated async methods to use cleaner mock implementations.

--- a/Runtime/NOPE.Runtime.asmdef
+++ b/Runtime/NOPE.Runtime.asmdef
@@ -11,17 +11,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "Unity",
-            "expression": "6000.0.0",
-            "define": "NOPE_AWAITABLE"
-        },
-        {
-            "name": "com.cysharp.unitask",
-            "expression": "2.0.0",
-            "define": "NOPE_UNITASK"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
