--- a/Tests/NOPE.Tests.asmdef
+++ b/Tests/NOPE.Tests.asmdef
@@ -20,17 +20,6 @@
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ],
-    "versionDefines": [
-        {
-            "name": "Unity",
-            "expression": "6000.0.0",
-            "define": "NOPE_AWAITABLE"
-        },
-        {
-            "name": "com.cysharp.unitask",
-            "expression": "2.0.0",
-            "define": "NOPE_UNITASK"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
